# My-Easy-Claw

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src-tauri/src/ipc/: internal_server.rs  mod.rs
src-tauri/src/plugins/: db.rs  fs_ext.rs  mod.rs  sandbox.rs  shell_ext.rs
