[package]
name = "my-easy-claw"
version = "0.1.0"
edition = "2021"
description = "Desktop AI Agent application"

[lib]
name = "my_easy_claw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "7"
axum = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
